--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div>
+        <div>
+            <nav class="nevigation">
+                <ul>
+                    <img src="logo1.png">
+                </ul>
+                <ul>
+                    <button href="" >Assignment</button>
+                </ul>
+                    <button href="" >Lab Report</button>
+                </ul>
+                <ul>
+                    <button href="" >Final Lab Report<button>
+                </ul>
+                <ul>
+                    <button href="" >Lab Index</button>
+                </ul>
+            </nav>
+        </div>
+    </div>
     <div>
         <div class="container">
             <form action="script.js" class="form" id="coverForm">
