--- a/index.html
+++ b/index.html
@@ -8,27 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div>
-        <div>
-            <nav class="nevigation">
-                <ul>
-                    <img src="logo1.png">
-                </ul>
-                <ul>
-                    <button href="" >Assignment</button>
-                </ul>
-                    <button href="" >Lab Report</button>
-                </ul>
-                <ul>
-                    <button href="" >Final Lab Report<button>
-                </ul>
-                <ul>
-                    <button href="" >Lab Index</button>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <div class="nav-logo">
+                <img src="logo1.png">
+            <a href="#"><span style="color: #204496;">D</span><span style="color: #8b9195;">I</span><span style="color: #39a94b;">U</span> Cover Page</a>
+            </div>
+            <ul>
+                <li><button href="index.html">Assignment</button></li> 
+                <li><button href="#">Lab Report</button></li> 
+                <li> <button href="#">Final Lab Report</button></li> 
+                <li><button href="#">Lab Index</button></li> 
+            </ul>
+        </nav>
     </div>
+
     <div>
         <div class="container">
             <form action="script.js" class="form" id="coverForm">
@@ -36,7 +30,7 @@
                     <img src="logo.png" alt="University Logo">
                 </div>
                 <div class="headtext">
-                    <h1>COVER PAGE</h1>
+                    <h1>ASSIGNMENT</h1>
                 </div>
                 <!-- <div class="form-group">
                     <label for="taskType">Cover Page Type:</label>
@@ -72,7 +66,7 @@
                     <input type="text" id="departmentTo"   name="submittedToDepartment" placeholder="Enter Department Name">
                 </div>
                 <div>
-                    <label for="university">University</label>
+                    <label for="university">University:</label>
                     <input type="text" id="university"   name="university" value="Daffodil International University">
                 </div>
                 <div class="form-group" id="underline">
@@ -97,7 +91,7 @@
                     <input type="text" id="departmentBy" name="submittedByDepartment" placeholder="Enter Your Department Name">
                 </div>
                 <div>
-                    <label for="university">University</label>
+                    <label for="university">University:</label>
                     <input type="text" id="university"   name="university" value="Daffodil International University">
                 </div>
                 <div class="form-group" id="underline">
