--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Cover Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="logo1.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,19 +13,21 @@
         <nav>
             <div class="nav-logo">
                 <img src="logo1.png">
-            <a href="#"><span style="color: #204496;">D</span><span style="color: #8b9195;">I</span><span style="color: #39a94b;">U</span> Cover Page</a>
+            <h1><span style="color: #204496;">D</span><span style="color: #8b9195;">I</span><span style="color: #39a94b;">U</span> Cover Page</h1>
             </div>
+            <div >
             <ul>
-                <li><button href="index.html">Assignment</button></li> 
-                <li><button href="#">Lab Report</button></li> 
-                <li> <button href="#">Final Lab Report</button></li> 
-                <li><button href="#">Lab Index</button></li> 
+                <li><a class="button" href="#assignment-form">Assignment</a></li> 
+                <li><a class="button" href="#lab-report-form">Lab Report</a></li> 
+                <li><a class="button" href="#final-lab-report-form">Final Lab Report</a></li> 
+                <li><a class="button" href="#lab-index-form">Lab Index</a></li> 
             </ul>
+        </div>
         </nav>
     </div>
 
     <div>
-        <div class="container">
+        <div class="content" id="assignment-form" name="reportType">
             <form action="script.js" class="form" id="coverForm">
                 <div class="logo">
                     <img src="logo.png" alt="University Logo">
@@ -32,14 +35,6 @@
                 <div class="headtext">
                     <h1>ASSIGNMENT</h1>
                 </div>
-                <!-- <div class="form-group">
-                    <label for="taskType">Cover Page Type:</label>
-                    <select id="pageType" name="pageType" placeholder="Select Cover Page Type">
-                      <option value="assignment">ASSIGNMENT</option>
-                      <option value="labReport">LAB REPORT</option>
-                    </select>
-                    <input type="text" id="pageType"   name="pageType" placeholder="Enter Cover Page Type">
-                  </div> -->
                 <div class="form-group">
                     <label for="courseCode">Course Code: </label>
                     <input type="text" id="courseCode"   name="courseCode" placeholder="Enter Course Code">
@@ -101,9 +96,83 @@
                 <button type="submit" class="submit">Submit</button>
             </form>
         </div>
+
+        <div class="content" id="lab-report-form" name="reportType">
+            <form action="script.js" class="form" id="coverForm">
+                <div class="logo">
+                    <img src="logo.png" alt="University Logo">
+                </div>
+                <div class="headtext">
+                    <h1>ASSIGNMENT</h1>
+                </div>
+                <div class="form-group">
+                    <label for="courseCode">Course Code: </label>
+                    <input type="text" id="courseCode"   name="courseCode" placeholder="Enter Course Code">
+                </div>
+                <div class="form-group">
+                    <label for="courseTitle">Course Title: </label>
+                    <input type="text" id="courseTitle"   name="courseTitle" placeholder="Enter Course Title">
+                </div>
+                <div class="form-group">
+                    <label for="experimentNo">Experiment No:</label>
+                    <input type="text" id="experimentNo"  name="experimentNo" placeholder="Enter Experiment No">
+                </div>
+                <div class="form-group">
+                    <label for="experimentName">Experiment Name:</label>
+                    <input type="text" id="experimentName"  name="experimentName" placeholder="Enter Experiment Name">
+                </div>
+                <div class="form-group" id="underline">
+                    <h2>Submitted To</h2>
+                    <label for="submittedToName">Name: </label>
+                    <input type="text" id="submittedToName"   name="submittedToName" placeholder="Enter Teacher Name">
+                </div>
+                <div class="form-group">
+                    <label for="designation">Designation: </label>
+                    <input type="text" id="designation"   name="submittedToDesignation" placeholder="Enter Teacher Designation">
+                </div>
+                <div class="form-group">
+                    <label for="departmentTo">Department: </label>
+                    <input type="text" id="departmentTo"   name="submittedToDepartment" placeholder="Enter Department Name">
+                </div>
+                <div>
+                    <label for="university">University:</label>
+                    <input type="text" id="university"   name="university" value="Daffodil International University">
+                </div>
+                <div class="form-group" id="underline">
+                    <h2>Submitted By</h2>
+                    <label for="submittedByName">Name: </label>
+                    <input type="text" class="submitToBy" id="submittedByName"   name="submittedByName" placeholder="Enter Your Name">
+                </div>
+                <div class="form-group">
+                    <label for="studentId">ID: </label>
+                    <input type="text" id="studentId" name="studentId" placeholder="Enter Your student ID">
+                </div>
+                <div class="form-group">
+                    <label for="section">Section: </label>
+                    <input type="text" id="section"  name="section" placeholder="Enter Your Section">
+                </div>
+                <div class="form-group">
+                    <label for="semester">Semester: </label>
+                    <input type="text" id="semester"  name="semester" placeholder="Enter Your Semester">
+                </div>
+                <div class="form-group">
+                    <label for="departmentBy">Department: </label>
+                    <input type="text" id="departmentBy" name="submittedByDepartment" placeholder="Enter Your Department Name">
+                </div>
+                <div>
+                    <label for="university">University:</label>
+                    <input type="text" id="university"   name="university" value="Daffodil International University">
+                </div>
+                <div class="form-group" id="underline">
+                    <label for="submissionDate">Submission Date: </label>
+                    <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date"> 
+                </div>
+                <button type="submit" class="submit">Submit</button>
+            </form>
+        </div>
     </div>
         
-    
+<div class="doc-size">
     <div id="document" class="document" style="display:none;">
         <div id="logo1">
             <img src="logo-tr.png" id="" >
@@ -120,6 +189,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
     <br>
