--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         </div>
         <div class="nav-button">
             <ul>
-                <li><a class="" href="#assingment-form">Assignment</a></li> 
-                <li><a class="" href="#lab-report-form">Lab Report</a></li> 
-                <li><a class="" href="#final-lab-report-form">Final Lab Report</a></li> 
-                <li><a class="" href="#lab-index-form">Lab Index</a></li>
+                <li><a class="active" href="#assignment-form">Assignment</a></li> 
+                <li><a href="#lab-report-form">Lab Report</a></li> 
+                <li><a href="#final-lab-report-form">Lab Final</a></li> 
+                <li><a href="#lab-index-form">Lab Index</a></li>
             </ul> 
         </div>
     </nav>
 </header>
 <main>
-    <section class="form-container" id="assingment-form" name="reportType">
-        <form action="script.js" class="form" id="coverForm">
+    <section class="form-container" id="assignment-form" >
+        <form action="script.js" class="form" id="assignment-form">
             <div class="form-top">
                 <div class="form-logo">
                     <img src="images/logo.png" alt="University Logo">
@@ -94,6 +94,261 @@
                 <input type="text" id="university"   name="university" value="Daffodil International University">
             </div>
             <div class="form-group" id="underline">
+                <label for="submissionDate">Submission Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date"> 
+            </div>
+            <button type="submit" class="submit">Submit</button>
+        </form>
+            <div class="document-holder">
+                <div id="document" class="document" style="display:none;">
+                    <div id="document-content" class="document-content">
+                        <div class="document-logo">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="document-watermark">
+                            <img src="images/logo-tr.png" alt="">
+                        </div>
+                        <div id="documentContent"></div>
+                    </div>
+                    <div class="document-buttons">
+                        <button id="downloadPdf" class="download">Download as PDF</button>
+                        <button id="downloadImage" class="image">Download as Image</button>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="form-container" id="lab-report-form">
+        <form action="script.js" class="form" id="lab-report-form">
+            <div class="form-top">
+                <div class="form-logo">
+                    <img src="images/logo.png" alt="University Logo">
+                </div>
+                <div class="head-text">
+                    <h1>LAB REPORT</h1>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="courseCode">Course Code: </label>
+                <input type="text" id="courseCode"   name="courseCode" placeholder="Enter Course Code">
+            </div>
+            <div class="form-group">
+                <label for="courseTitle">Course Title: </label>
+                <input type="text" id="courseTitle"   name="courseTitle" placeholder="Enter Course Title">
+            </div>
+            <div class="form-group">
+                <label for="topicName">Experiment No:</label>
+                <input type="text" id="experimentNo"  name="experimentNo" placeholder="Enter Experiment No">
+            </div>
+            <div class="form-group">
+                <label for="topicName">Experiment Name:</label>
+                <input type="text" id="experimentName"  name="experimentName" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group" id="underline">
+                <div class="category-head-text">Submitted To</div>
+                <label for="submittedToName">Name: </label>
+                <input type="text" id="submittedToName"   name="submittedToName" placeholder="Enter Teacher Name">
+            </div>
+            <div class="form-group">
+                <label for="designation">Designation: </label>
+                <input type="text" id="designation"   name="submittedToDesignation" placeholder="Enter Teacher Designation">
+            </div>
+            <div class="form-group">
+                <label for="departmentTo">Department: </label>
+                <input type="text" id="departmentTo"   name="submittedToDepartment" placeholder="Enter Department Name">
+            </div>
+            <div>
+                <label for="university">University:</label>
+                <input type="text" id="university"   name="university" value="Daffodil International University">
+            </div>
+            <div class="form-group" id="underline">
+                <div class="category-head-text">Submitted By</div>
+                <label for="submittedByName">Name: </label>
+                <input type="text" class="submitToBy" id="submittedByName"   name="submittedByName" placeholder="Enter Your Name">
+            </div>
+            <div class="form-group">
+                <label for="studentId">ID: </label>
+                <input type="text" id="studentId" name="studentId" placeholder="Enter Your student ID">
+            </div>
+            <div class="form-group">
+                <label for="section">Section: </label>
+                <input type="text" id="section"  name="section" placeholder="Enter Your Section">
+            </div>
+            <div class="form-group">
+                <label for="semester">Semester: </label>
+                <input type="text" id="semester"  name="semester" placeholder="Enter Your Semester">
+            </div>
+            <div class="form-group">
+                <label for="departmentBy">Department: </label>
+                <input type="text" id="departmentBy" name="submittedByDepartment" placeholder="Enter Your Department Name">
+            </div>
+            <div>
+                <label for="university">University:</label>
+                <input type="text" id="university"   name="university" value="Daffodil International University">
+            </div>
+            <div class="form-group" id="underline">
+                <label for="submissionDate">Submission Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date"> 
+            </div>
+            <button type="submit" class="submit">Submit</button>
+        </form>
+            <div class="document-holder">
+                <div id="document" class="document" style="display:none;">
+                    <div id="document-content" class="document-content">
+                        <div class="document-logo">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="document-watermark">
+                            <img src="images/logo-tr.png" alt="">
+                        </div>
+                        <div id="documentContent"></div>
+                    </div>
+                    <div class="document-buttons">
+                        <button id="downloadPdf" class="download">Download as PDF</button>
+                        <button id="downloadImage" class="image">Download as Image</button>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="form-container" id="final-lab-report-form">
+        <form action="script.js" class="form" id="final-lab-report-form">
+            <div class="form-top">
+                <div class="form-logo">
+                    <img src="images/logo.png" alt="University Logo">
+                </div>
+                <div class="head-text">
+                    <h1>FINAL LAB REPORT</h1>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="courseCode">Course Code: </label>
+                <input type="text" id="courseCode"   name="courseCode" placeholder="Enter Course Code">
+            </div>
+            <div class="form-group">
+                <label for="courseTitle">Course Title: </label>
+                <input type="text" id="courseTitle"   name="courseTitle" placeholder="Enter Course Title">
+            </div>
+            
+            <div class="form-group">
+                <div class="category-head-text">Submitted To</div>
+                <label for="submittedToName">Name: </label>
+                <input type="text" id="submittedToName"   name="submittedToName" placeholder="Enter Teacher Name">
+            </div>
+            <div class="form-group">
+                <label for="designation">Designation: </label>
+                <input type="text" id="designation"   name="submittedToDesignation" placeholder="Enter Teacher Designation">
+            </div>
+            <div class="form-group">
+                <label for="departmentTo">Department: </label>
+                <input type="text" id="departmentTo"   name="submittedToDepartment" placeholder="Enter Department Name">
+            </div>
+            <div>
+                <label for="university">University:</label>
+                <input type="text" id="university"   name="university" value="Daffodil International University">
+            </div>
+            <div class="form-group">
+                <div class="category-head-text">Submitted By</div>
+                <label for="submittedByName">Name: </label>
+                <input type="text" class="submitToBy" id="submittedByName"   name="submittedByName" placeholder="Enter Your Name">
+            </div>
+            <div class="form-group">
+                <label for="studentId">ID: </label>
+                <input type="text" id="studentId" name="studentId" placeholder="Enter Your student ID">
+            </div>
+            <div class="form-group">
+                <label for="section">Section: </label>
+                <input type="text" id="section"  name="section" placeholder="Enter Your Section">
+            </div>
+            <div class="form-group">
+                <label for="semester">Semester: </label>
+                <input type="text" id="semester"  name="semester" placeholder="Enter Your Semester">
+            </div>
+            <div class="form-group">
+                <label for="departmentBy">Department: </label>
+                <input type="text" id="departmentBy" name="submittedByDepartment" placeholder="Enter Your Department Name">
+            </div>
+            <div>
+                <label for="university">University:</label>
+                <input type="text" id="university"   name="university" value="Daffodil International University">
+            </div>
+            <div class="form-group">
+                <label for="submissionDate">Submission Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date"> 
+            </div>
+            <button type="submit" class="submit">Submit</button>
+        </form>
+            <div class="document-holder">
+                <div id="document" class="document" style="display:none;">
+                    <div id="document-content" class="document-content">
+                        <div class="document-logo">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="document-watermark">
+                            <img src="images/logo-tr.png" alt="">
+                        </div>
+                        <div id="documentContent"></div>
+                    </div>
+                    <div class="document-buttons">
+                        <button id="downloadPdf" class="download">Download as PDF</button>
+                        <button id="downloadImage" class="image">Download as Image</button>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="form-container" id="lab-index-form" >
+        <form action="script.js" class="form" id="lab-index-form">
+            <div class="form-top">
+                <div class="form-logo">
+                    <img src="images/logo.png" alt="University Logo">
+                </div>
+                <div class="head-text">
+                    <h1>LAB INDEX</h1>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="courseCode">Experiment No 1: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 2: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 3: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 4: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 5: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 6: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 7: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 8: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 9: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            <div class="form-group">
+                <label for="courseCode">Experiment No 10: </label>
+                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+            </div>
+            
+            <div class="form-group">
                 <label for="submissionDate">Submission Date: </label>
                 <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date"> 
             </div>
