--- a/index.html
+++ b/index.html
@@ -307,59 +307,73 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 1: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 2: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 3: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 4: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 5: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 6: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 7: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 8: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 9: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
-            <div class="form-group">
+            <div class="index-form-group">
                 <label for="courseCode">Experiment No 10: </label>
-                <input type="text" id="experimentNo"   name="experimentNo" placeholder="Enter Experiment Name">
+                <input type="text" id="experimentName"   name="experimentName" placeholder="Enter Experiment Name">
+                <label for="submissionDate">Submitted Date: </label>
+                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date">
             </div>
             
-            <div class="form-group">
-                <label for="submissionDate">Submission Date: </label>
-                <input type="date" id="submissionDate"  name="submissionDate" placeholder="Enter Submission Date"> 
-            </div>
             <button type="submit" class="submit">Submit</button>
         </form>
             <div class="document-holder">
-                <div id="document" class="document" style="display:none;">
-                    <div id="document-content" class="document-content">
-                        <div class="document-logo">
-                            <img src="images/logo.png" alt="">
-                        </div>
+                <div id="index-document" class="index-document" style="display:none;">
+                    <div id="index-document-content" class="index-document-content">
+                        
                         <div class="document-watermark">
                             <img src="images/logo-tr.png" alt="">
                         </div>
