Project successfully completed

--- a/index.html
+++ b/index.html
@@ -128,12 +128,11 @@
 </main>
 
 
-<!-- <footer class="footer">
-    <p>Webpage Created by <br>
-        <a href="https://github.com/tasnim-farhan-fahim" target="_blank">Tasnim Farhan Fahim</a><br>
-        Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a>
+<footer class="footer">
+    <a href="https://github.com/tasnim-farhan-fahim" target="_blank">&copyTasnim Farhan Fahim <i class="fa fa-github"></i></a><br>
+    Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a>
     </p>
-</footer> -->
+</footer>
 </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
