--- a/labIndex.html
+++ b/labIndex.html
@@ -163,6 +163,12 @@
             </div>
     </section>
 </main>
+
+<footer class="footer">
+    <a href="https://github.com/tasnim-farhan-fahim" target="_blank">&copyTasnim Farhan Fahim <i class="fa fa-github"></i></a><br>
+    Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a>
+    </p>
+</footer>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
