--- a/labIndex.html
+++ b/labIndex.html
@@ -166,8 +166,8 @@
 
 <footer class="footer">
     <a href="https://github.com/tasnim-farhan-fahim" target="_blank">&copyTasnim Farhan Fahim <i class="fa fa-github"></i></a><br>
-    Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a>
-    </p>
+    <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
+</p>
 </footer>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
