--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 <footer class="footer">
     <a href="https://github.com/tasnim-farhan-fahim" target="_blank">&copyTasnim Farhan Fahim <i class="fa fa-github"></i></a><br>
-    Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a>
+    <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
     </p>
 </footer>
 </div>
