--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
 
 <div class="project">
+    <div id="popup" class="popup">
+        <div class="popup-content">
+            <p>Please switch to the <span style="color: rgb(255, 0, 0);">Desktop site</span> on your phone for an accurate document view.</p>
+            <button onclick="handlePopupOk()">OK</button>
+        </div>
+    </div>
     <header class="header">
         <nav class="nav-bar">
             <div class="nav-logo">
