--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <p>Please switch to the <span style="color: rgb(255, 0, 0);">Desktop site</span> on your phone for an accurate document view.</p>
+            <br>
+            <p>
+                <span >Click on <i class="fas fa-ellipsis-v"></i></span>
+                <p class="arrow">↓</p>
+                <span class="desktopSite"> Desktop site <i class="far fa-square"></i></span>
+                <p class="arrow">↓</p>
+                <span class="desktopSite"> Desktop site <i class="fas fa-check-square"> </i></span>
+            </p>
             <button onclick="handlePopupOk()">OK</button>
         </div>
     </div>
@@ -143,6 +151,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="script.js"></script>
 </body>
 </html>
