--- a/labFinal.html
+++ b/labFinal.html
@@ -121,7 +121,7 @@
 </main>
 
 <footer class="footer">
-    <a href="https://github.com/tasnim-farhan-fahim" target="_blank">&copyTasnim Farhan Fahim <i class="fa fa-github"></i></a><br>
+    <a href="https://github.com/tasnim-farhan-fahim" target="_blank">&copyTasnim Farhan Fahim <i class="fab fa-github"></i></a><br>
     <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
     </p>
 </footer>
