--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                         </div>
                         <div id="documentContent"></div>
                     </div>
+                    <div class="page-reference-text"><p>www.diucoverpage.com</p></div>
                     <div class="document-buttons">
                         <button id="downloadPdf" class="download">Download as PDF</button>
                         <button id="downloadImage" class="image">Download as Image</button>
