--- a/labIndex.html
+++ b/labIndex.html
@@ -156,6 +156,7 @@
                         </div>
                         <div id="documentContentIndex"></div>
                     </div>
+                    <div class="page-reference-text-index"><p>www.diucoverpage.com</p></div>
                     <div class="document-buttons">
                         <button id="downloadPdf" class="download">Download as PDF</button>
                         <button id="downloadImage" class="image">Download as Image</button>
