--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
             <button type="submit" class="submit">Submit</button>
         </form>
-            <div class="document-holder">
+            <a target="_parent"><div class="document-holder">
                 <div id="document" class="document" style="display:none;">
                     <div id="document-content" class="document-content">
                         <div class="document-logo">
@@ -124,6 +124,7 @@
                     </div>
                 </div>
             </div>
+        </a>
     </section>
 
 
