--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="author" content="Tasnim Farhan Fahim" />
     <meta name="description" content="DIU Cover Page, Create your DIU Assignment, Lab Report, Lab Index Cover Page by easily filling the form, download and print out the cover page in case of emergency like BLC submission. It's Free and Easy to use." />
     <meta name="keywords" content="DIU Cover Page, Create your DIU Cover Page, Create Assignment Cover Page, Create Lab Report Cover Page, Create Lab Index Cover Page" />
-    
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "WebSite",
+          "name": "Create DIU Cover Pages",
+          "url": "https://diucoverpage.com"
+        }
+        </script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
