Some minor changes in the website with improved version

--- a/labFinal.html
+++ b/labFinal.html
@@ -32,7 +32,17 @@
             </div>
         </nav>
     </header>
+
 <main>
+    <!-- ----------------------------------- -->
+    <section>
+        <div class="suggestion-text">
+            <p>Fill out the form, hit the <span style="color: rgb(61, 204, 61);">submit</span> button, and get your cover page ready.</p>
+            <p><span style="color: rgb(252, 38, 38);">*Note:</span> To create another cover page, please <span style="color: rgb(252, 38, 38);">reload</span> the website.</p>
+        </div>
+    </section>
+    
+    <!-- ----------------------------------- -->
     <section class="form-container" id="final-lab-report-form">
         <form action="script.js" class="form" id="final-lab-report-form">
             <div class="form-top">
@@ -123,9 +133,9 @@
 </main>
 
 <footer class="footer">
-    <a href="https://github.com/tasnim-farhan-fahim" target="_blank">&copyTasnim Farhan Fahim <i class="fab fa-github"></i></a><br>
+    <p class="feedback"><a href="https://t.me/zero2fahim" target="_blank">Click here for any inquiries about the website <i class="fab fa-telegram"></i></a></p>
+    <p>All rights reserved &copy<a href="https://github.com/tasnim-farhan-fahim" target="_blank">Tasnim Farhan Fahim <i class="fab fa-github"></i></a></p>
     <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
-    </p>
 </footer>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
