--- a/labIndex.html
+++ b/labIndex.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIU Cover Page</title>
+    <meta name="author" content="Tasnim Farhan Fahim" />
+    <meta name="description" content="Create DIU Cover Page | Are you a student of DIU? You can now create your Assignment, Lab Report, Lab Index Cover Page by easily filling the form, download and print out the cover page in case of emergency like BLC submission. It's Free and Easy to use." />
+    <meta name="keywords" content="DIU Cover Page, Create DIU Cover Page, Create Assignment Cover Page, Create Lab Report Cover Page, Create Lab Index Cover Page" />
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "WebSite",
+          "name": "Create DIU Cover Pages",
+          "url": "https://diucoverpage.com"
+        }
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9557711562563778"crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
