--- a/termsandcondition.html
+++ b/termsandcondition.html
@@ -15,7 +15,7 @@
           "url": "https://diucoverpage.com"
         }
     </script>
-    <link rel="canonical" href="https://diucoverpage.com/privacy&policy.html">
+    <link rel="canonical" href="https://diucoverpage.com/termsandcondition.html">
 
     <meta name="google-adsense-account" content="ca-pub-9557711562563778">
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
