--- a/final-lab-report.html
+++ b/final-lab-report.html
@@ -15,7 +15,7 @@
           "url": "https://diucoverpage.com"
         }
     </script>
-    <link rel="canonical" href="https://diucoverpage.com/labFinal.html">
+    <link rel="canonical" href="https://diucoverpage.com/final-lab-report.html">
 
     <meta name="google-adsense-account" content="ca-pub-9557711562563778">
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
@@ -31,25 +31,20 @@
         <div class="header-left" id="header-left">
             <!-- Left Header Content -->
         </div>
+                <!-- Middle Header Content -->
         <div class="header-mid" id="header-mid">
-            <!-- Middle Header Content -->
-            <nav class="nav-bar">
-                <div class="nav-logo">
-                    <img class="nav-icon" src="images/nav-logo-diu.png" alt="">
-                </div>
-                <div class="nav-button">
-                    <div class="dropdown">
-                        <button>Lab Final <i class="fa fa-caret-down"></i></button>
-                        
-                        <div class="dropdown-content">
-                            <a href="index.html">Assignment</a>
-                            <a href="lab.html">Lab Report</a>
-                            <a href="#">Lab Final</a>
-                            <a href="labIndex.html">Lab Index</a>
+            <div>      
+                <nav class="nav-bar">
+                    <div class="nav-logo">
+                        <img class="nav-icon" src="images/nav-logo-diu.png" alt="">
+                    </div>
+                    <div class="nav-button">
+                        <div class="dropdown">
+                            <a href="./index.html"><button><i class="fa fa-arrow-left"></i> Go Back </i></button></a>
                         </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
         </div>
         <div class="header-right" id="header-right">
             <!-- Right Header Content -->
@@ -191,15 +186,6 @@
         </div>
 <!-- --------------------------------------------------- -->
     </div>
-<!-- ------------------------Cover Page Docx Files---------------------------- -->
-<div class="docs">
-    <div class="docs-left"></div>
-    <div class="docs-mid">
-        <p>Something New Coming...<p>
-    </div>
-    <div class="docs-right"></div>
-</div>
-
 
 <!-- ------------------------------------------------------------------------ -->
     <!-- Footer Section -->
