--- a/lab-report.html
+++ b/lab-report.html
@@ -15,7 +15,7 @@
           "url": "https://diucoverpage.com"
         }
     </script>
-    <link rel="canonical" href="https://diucoverpage.com/lab.html">
+    <link rel="canonical" href="https://diucoverpage.com/lab-report.html">
     <meta name="google-adsense-account" content="ca-pub-9557711562563778">
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -30,25 +30,19 @@
     <div class="header-left" id="header-left">
         <!-- Left Header Content -->
     </div>
-    <div class="header-mid" id="header-mid">
         <!-- Middle Header Content -->
-        <nav class="nav-bar">
-            <div class="nav-logo">
-                <img class="nav-icon" src="images/nav-logo-diu.png" alt="">
-            </div>
-            <div class="nav-button">
-                <div class="dropdown">
-                    <button>Lab Report <i class="fa fa-caret-down"></i></button>
-                    
-                    <div class="dropdown-content">
-                        <a href="index.html">Assignment</a>
-                        <a href="#">Lab Report</a>
-                        <a href="labFinal.html">Lab Final</a>
-                        <a href="labIndex.html">Lab Index</a>
-                    </div>
+    <div class="header-mid" id="header-mid">
+        <div>      
+            <nav class="nav-bar">
+                <div class="nav-logo">
+                    <img class="nav-icon" src="images/nav-logo-diu.png" alt="">
                 </div>
-            </div>
-        </nav>
+                <div class="nav-button">
+                    <div class="dropdown">
+                        <a href="./index.html"><button><i class="fa fa-arrow-left"></i> Go Back </i></button></a>                    </div>
+                </div>
+            </nav>
+        </div>
     </div>
     <div class="header-right" id="header-right">
         <!-- Right Header Content -->
@@ -199,17 +193,6 @@
 <!-- --------------------------------------------------- -->
 
 </div>
-<!-- ------------------------Cover Page Docx Files---------------------------- -->
-<div class="docs">
-    <div class="docs-left"></div>
-    <div class="docs-mid">
-        <p>Something New Coming...<p>
-    </div>
-    <div class="docs-right"></div>
-</div>
-
-
-<!-- ------------------------------------------------------------------------ -->
 <!-- Footer Section -->
 <div class="footer" id="footer">
     <!-- ------------------------------------------------------------------------------------------------------------- -->
