feat: modular architecture followed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="images/logo1.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- ------------------------------------------------------------------------------------------------------------- -->
@@ -75,7 +75,7 @@
             <div class="icon-section">
                 <h1>Cover Pages</h1>
                 <div>
-                    <a href="assignment.html">
+                    <a href="src/assignment.html">
                         <div class="icon-box">
                             <i class="fa fa-pencil-square-o"></i>
                             <span class="icon-label">Assignment</span>
@@ -83,7 +83,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="lab-report.html">
+                    <a href="src/lab-report.html">
                         <div class="icon-box">
                             <i class="fas fa-flask"></i>
                             <span class="icon-label">Lab Report</span>
@@ -91,7 +91,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="final-lab-report.html">
+                    <a href="src/final-lab-report.html">
                         <div class="icon-box">
                             <i class="fas fa-file-alt"></i>
                             <span class="icon-label">Final Lab Report</span>
@@ -99,7 +99,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="lab-report-index.html">
+                    <a href="src/lab-report-index.html">
                         <div class="icon-box">
                             <i class="fas fa-list-ol"></i>
                             <span class="icon-label">Lab Index</span>
@@ -147,8 +147,8 @@
             <p>Email: <a href="mailto:fahim22205101291@diu.edu.bd">Fahim22205101291@diu.edu.bd</a></p>
             <div>
                 <br><br>
-                <a href="termsandcondition.html">Terms and Conditions  | </a>
-                <a href="privacyandpolicy.html"> Privacy and Policy</a>
+                <a href="src/termsandcondition.html">Terms and Conditions  | </a>
+                <a href="src/privacyandpolicy.html"> Privacy and Policy</a>
                 <br>
             </div>
     </div>
@@ -165,6 +165,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html-docx-js/0.4.0/html-docx.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
